--- a/part9/end.html
+++ b/part9/end.html
@@ -64,10 +64,11 @@
           set: function(value) {
             var name = value.split(' ')
             this.first = name[0]
-            this.last = name[name.length - 1]
+              this.last = name[1]
+
           }
         }
       }
     })
   </script>
-</html>
+
