--- a/part2/index.html
+++ b/part2/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns:v-bind="http://www.w3.org/1999/xhtml">
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -9,10 +9,30 @@
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
   </head>
-
+  <style>
+    [v-cloak]
+    {
+      background-color: red;
+    }
+  </style>
   <body>
     <div id="app">
-      <h1>{{message}}</h1>
+      <h1 v-bind:title="title">{{message}}</h1>
+      <h1 v-pre>{{message}}</h1>
+      <h1 v-once>{{message}}</h1>
+      <h1 v-text="text"></h1>
+      <h1 v-html="usehtml"></h1>
+      <h1 v-show="viewed">you have viewed this page</h1>
+      <!--v-if removes and adds element to dom-->
+      <h1 v-if="viewed">you have viewed this page using v-if</h1>
+      <h1 v-if="viewed==viewed2">you have viewed this page using comparison</h1>
+      <h3 v-else>this is else section</h3>
+      <h3 v-cloak>this is cloak section</h3>
+
+      <!--v-bind is used for existing possible attributes of an element-->
+        <h2 :title="title">hello binding</h2>
+
+
     </div>
   </body>
 
@@ -22,7 +42,12 @@
     var app = new Vue({
       el: '#app',
       data: {
-        message: 'Hello Vue World'
+          message: 'Hello Vue World',
+          text:"this is v-text binding",
+          usehtml:"you can use html\n<strong>this is strong sect</strong>",
+          viewed:true,
+          viewed2:false,
+          title:"this page is loaded in"+new Date()
       }
     })
   </script>
