--- a/part5/end.html
+++ b/part5/end.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns:v-on="http://www.w3.org/1999/xhtml">
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -12,27 +12,55 @@
 
   <body>
     <div id="app">
-      <h1>{{ message }}</h1>
-      <ul>
-        <li v-for="count in count">item #{{count}}</li>
-      </ul>
+      <h1>count:{{count}}</h1>
+      <!--<ul>-->
+        <!--<li v-for="count in count">item #{{count}}</li>-->
+      <!--</ul>-->
+      <input type="text" v-model="message">
+      <h2>{{message}}</h2>
+      <button v-on:click="clicked()" class="btn btn-primary">increment</button>
+      <button v-on:click="dclicked()" class="btn btn-danger">decrement</button>
+      <div>
+        <a v-bind:href="url" v-text="cleanUrl"></a>
+        <br>
+        <input type="text" class="form-control-sm" v-model="url">
+        <button class="btn btn-success" v-on:click="setit()">set</button>
+      </div>
     </div>
+
   </body>
-
   <script src="https://unpkg.com/vue@2.0.3/dist/vue.js"></script>
-
   <script>
     var app = new Vue({
       el: '#app',
       data: {
-        message: 'Hello Vue World',
+        message: '',
         todos: [
           { text: 'Learn Vue', id: 4 },
           { text: 'Like the video', id: 2 },
           { text: 'Subscribe to DevMarketer', id: 6 }
         ],
-        count: 1000
-      }
+        count: 0,
+          url:'',
+          cleanUrl:''
+      },
+        methods:
+            {
+                dclicked()
+                {
+                   this.count--;
+                },
+                clicked()
+                {
+                      this.count++;
+                },
+                setit()
+                {
+
+                    this.cleanUrl=this.url.replace(/^https?:\/\//,'').replace(/\/$/,'');
+                    alert(this.cleanUrl);
+                }
+            }
     })
   </script>
 </html>
